# churn-predictor-ANN

./: README.md  main.py  pyproject.toml  requirements.txt
models/: model.keras
notebooks/: experiments.ipynb  predictions.ipynb
notebooks/logs/fit/20251002-192520/train/: events.out.tfevents.1759413424.LEGION-5-SLIM.23584.0.v2
notebooks/logs/fit/20251002-192716/train/: events.out.tfevents.1759413436.LEGION-5-SLIM.23584.1.v2
notebooks/logs/fit/20251002-192745/train/: events.out.tfevents.1759413465.LEGION-5-SLIM.23584.2.v2
notebooks/logs/fit/20251002-192745/validation/: events.out.tfevents.1759413472.LEGION-5-SLIM.23584.3.v2
