[project]
name = "end-to-end-deep-learning-project-using-ann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
]
